tests/baselines/reference/genericLogicalAndInference.errors.txt
genericLogicalAndInference.ts(36,5): error TS2322: Type '<T extends string | null>(x: T) => "" | T' is not assignable to type '<T extends string | null>(x: T) => T'.
  Type '"" | T' is not assignable to type 'T'.
    '"" | T' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'string'.
      Type 'string' is not assignable to type 'T'.
        'string' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'string'.


==== genericLogicalAndInference.ts (1 errors) ====
    // Repro from #62133
    
    function test1<T>(x: T) {
        var r1 = x && x;
        return r1;
    }
    
    function test2<T extends string | null>(x: T) {
        var r2 = x && x;
        return r2;
    }
    
    function test3<T extends object>(x: T) {
        var r3 = x && x;
        return r3;
    }
    
    function test4<T>(x: T, y: string) {
        var r4 = x && y;
        return r4;
    }
    
    var r1 = test1("hello");
    var r2 = test1(null);
    var r3 = test1(undefined);
    var r4 = test1(42);
    
    var r5 = test2("test");
    var r6 = test2(null);
    
    var r7 = test3({a: 1});
    
    var r8 = test4(null, "hello");
    
    var f1: <T>(x: T) => T = <T>(x: T) => x && x;
    var f2: <T extends string | null>(x: T) => T = <T extends string | null>(x: T) => x && x;
        ~~
!!! error TS2322: Type '<T extends string | null>(x: T) => "" | T' is not assignable to type '<T extends string | null>(x: T) => T'.
!!! error TS2322:   Type '"" | T' is not assignable to type 'T'.
!!! error TS2322:     '"" | T' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'string'.
!!! error TS2322:       Type 'string' is not assignable to type 'T'.
!!! error TS2322:         'string' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'string'.
    